# djura

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  ReadMe.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release-data.yml
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  custom_metadata.rst  dataset.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: data_loader.rst  edp_im.rst  fragility_converter.rst  hazard_consistency.rst  index.rst  record_selection.rst  slf.rst  vulnerability_modeller.rst
docs/source/examples/: djura_tools.rst  edp_im.rst  edp_im_backbone.rst  edp_im_bilinear.rst  edp_im_infill.rst  edp_im_isolated.rst  fragility_converter.rst  hazard_consistency.rst  index.rst  record_selection.rst  record_selection_oq.rst  record_selection_vertical.rst  slf.rst  slf_pfa.rst  slf_psd_grouping.rst  vulnerability_modeller.rst
src/djura/: __init__.py  data_loader.py  utilities.py
src/djura/edp_im/: XGBPredict.py  __init__.py  predict.py  scaler.py
src/djura/edp_im/models/: R_xgb.ubj  R_xgb_collapse.ubj  __init__.py  ro_2_xgb.ubj  ro_3_xgb_collapse.ubj
src/djura/edp_im/r_mu_t/: ec8.py  guerrini.py  krawinkler_nassar.py  miranda.py  newmark_hall.py  vidic.py
src/djura/fragility_converter/: __init__.py  ff.py  ff_approximate.py
src/djura/hazard_consistency/: __init__.py  hazard.py  hazard_consistency.py  hazard_fit.py  hazard_model.py  models.py
src/djura/record_selection/: __init__.py  _activation_functions.py  _filter.py  _gcim.py  _gcim_conditional.py  _gcim_select.py  _gcim_unconditional.py  constants.py  correlation_models.py  correlation_models_v.py  correlations.py  data_reader.py  gcim.py  gm_to_rs.py  gmm_tools.py  helpers.py  intensity_measure.py  metrics.py  models.py  nga_west2.py  numba_utils.py  utilities.py
src/djura/record_selection/assets/: ATTRIBUTION.md  akkar_correlation_table.txt  gkas2017_between_table.txt  gkas2017_within_table.txt  gmm_ann.json  gmm_data.json  gmm_data.v2.json
src/djura/record_selection/gsim/: NOTICE.md  __init__.py  base.py  coeffs_table.py  const.py  contexts.py  imt.py  oq.py  utils.py
src/djura/record_selection/gsim/models/: __init__.py  _gmpe_avgsa_deprecated.py  abrahamson_2014.py  abrahamson_2015.py  abrahamson_gulerce_2020.py  abrahamson_silva_1996.py  abrahamson_silva_2008.py  afshari_stewart_2016.py  akkar_2014.py  akkar_bommer_2010.py  akkar_bommer_2010_swiss_coeffs.py  akkar_cagnan_2010.py  aristeidou_2024.py  (+34 more)
src/djura/slf/: __init__.py  models.py  regression_methods.py  slf.py  utilities.py
src/djura/vulnerability_modeller/: __init__.py  _vulnerability_modeller.py  backbone.py  demands.py  eal.py  fragility.py  hazard_model.py  pfa_profile.py  utilities.py  vm_mdof.py
tests/: ReadMe.md  test_smoke.py
tests/ff/: test_cdf_fits.py  test_ff.py  test_metrics.py
tests/ff/assets/data/: cdf_fit.json
tests/ff/assets/ff-approximate/: approx_SA(0.5).json  ff.json
tests/ff/assets/frags/: frags-0.5-0.05.json  frags-1.0-0.05.json  frags-1.5-0.05.json
tests/ff/assets/oq_dis/: ctx.pickle  input.json
tests/hazard/: test_hzc.py
tests/hazard/assets/hazard/: hazard.json  hazard_curve-mean-FIV3(0.5)_4.csv  hazard_curve-mean-FIV3(1.0)_4.csv  hazard_curve-mean-FIV3(1.5)_4.csv  hazard_curve-mean-FIV3(2.0)_4.csv  hazard_curve-mean-PGA_4.csv  hazard_curve-mean-PGV_4.csv  hazard_curve-mean-SA(0.05)_4.csv  hazard_curve-mean-SA(0.075)_4.csv  hazard_curve-mean-SA(0.1)_4.csv  hazard_curve-mean-SA(0.2)_4.csv  hazard_curve-mean-SA(0.3)_4.csv  hazard_curve-mean-SA(0.4)_4.csv  hazard_curve-mean-SA(0.5)_4.csv  hazard_curve-mean-SA(0.6)_4.csv  hazard_curve-mean-SA(0.7)_4.csv  hazard_curve-mean-SA(0.8)_4.csv  hazard_curve-mean-SA(0.9)_4.csv  hazard_curve-mean-SA(1.0)_4.csv  hazard_curve-mean-SA(1.1)_4.csv  hazard_curve-mean-SA(1.2)_4.csv  hazard_curve-mean-SA(1.3)_4.csv  hazard_curve-mean-SA(1.4)_4.csv  hazard_curve-mean-SA(1.5)_4.csv  hazard_curve-mean-SA(1.6)_4.csv  hazard_curve-mean-SA(1.7)_4.csv  hazard_curve-mean-SA(1.8)_4.csv  hazard_curve-mean-SA(1.9)_4.csv  hazard_curve-mean-SA(2.0)_4.csv  hazard_curve-mean-SA(2.1)_4.csv  hazard_curve-mean-SA(2.2)_4.csv  hazard_curve-mean-SA(2.3)_4.csv  hazard_curve-mean-SA(2.4)_4.csv  hazard_curve-mean-SA(2.5)_4.csv  hazard_curve-mean-SA(2.6)_4.csv  hazard_curve-mean-SA(2.7)_4.csv  hazard_curve-mean-SA(2.8)_4.csv  hazard_curve-mean-SA(2.9)_4.csv  hazard_curve-mean-SA(3.0)_4.csv  hazard_curve-mean-Sa_avg2(0.5)_4.csv  (+7 more)
tests/rs/: test_corr.py  test_corr_v.py  test_gcim.py  test_gcim_v.py  test_gm_to_rs.py  test_ignore_by_key.py  test_indirect_avgsa.py  test_intensity_measure.py  test_oq_rs.py  test_tools.py
tests/rs/assets/gcim_inputs/: input1.json  input10.json  input11.json  input12.json  input13.json  input14.json  input15.json  input16.json  input17.json  input18.json  input2.json  input3.json  input4.json  input5.json  input6.json  input7.json  input8.json  input9.json
tests/rs/assets/oq_dis/: ctx_80_AvgSA(0.5).pickle
tests/rs/assets/records/: RSN156_ITALY_F-CSC-NS.AT2  RSN288_ITALY_A-BRZ000.AT2
tests/slf/: test_api.py  test_slf.py
tests/slf/assets/: corr1.json  correlations.json  inv1.json  inv2.json  inv_pfa_psd.json  inventory.json  pfa_corr.json  pfa_inv.json
tests/vm/: conftest.py  test_demands.py  test_edp_im.py  test_mdof.py  test_rhomut.py  test_slf_refined.py  test_spo_fit.py  test_vm.py  test_xgb_predict.py
tests/vm/assets/backbones/: backbone1.json  backbone2.json  backbone3.json  backbone4.json  backbone5.json  batch.json  infill.json  isol.json
tests/vm/assets/samples-for-vm/: edpim.json  pfa.json  psd.json  slf.json  vm.json
tests/vm/assets/slf-refined/: slf.json
tests/vm/assets/spo/: MA1.json  heights.txt  spo.json  spo1.txt  spo_disps.txt  spo_disps_infill.txt  spo_drifts.txt  spo_infill.json  spo_sdof.json  spo_sdof_infill.json  spo_shear_infill.txt  spo_topdisp.txt
tests/vm/assets/vm/: backbone.json  input.yaml  slf.json
(+60 files in other folders)
