[project]
name = "djura"
version = "0.1.0"
description = "Scientific Python toolkit for earthquake engineering: GCIM-based ground motion record selection, hazard consistency, vulnerability modelling, and storey loss functions."
authors = [
    { name = "Djura | Risk - Data - Engineering S.r.l.", email = "info@djura.it" },
]
readme = "ReadMe.md"
license = "AGPL-3.0-later"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
keywords = [
    "earthquake-engineering",
    "seismic-hazard",
    "ground-motion-selection",
    "gcim",
    "vulnerability",
    "fragility",
    "storey-loss-function",
    "performance-based-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy (>=1.26,<2.0)",
    "scipy (>=1.14)",
    "pandas (>=2.2)",
    "numba (>=0.59)",
    "xgboost (>=1.7)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "h5py (>=3.16.0,<4.0.0)",
    "requests (>=2.32)",
    "joblib (>=1.5.3,<2.0.0)",
    "pwlf (>=2.5.2,<3.0.0)",
]

[project.urls]
Homepage = "https://github.com/davitshahnazaryan3/djura"
Repository = "https://github.com/davitshahnazaryan3/djura"
Issues = "https://github.com/davitshahnazaryan3/djura/issues"
Changelog = "https://github.com/davitshahnazaryan3/djura/blob/main/CHANGELOG.md"

[project.optional-dependencies]
plot = ["matplotlib (>=3.9)"]
hdf5 = ["h5py (>=3.12)"]
all = ["matplotlib (>=3.9)", "h5py (>=3.12)"]

[tool.poetry]
packages = [{ include = "djura", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "schema (>=0.7.8,<0.8.0)",
]

[tool.coverage.run]
branch = true
source = ["src/djura"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
