[project]
name = "djura"
# Version is set dynamically from git tags by poetry-dynamic-versioning.
# The placeholder below is overwritten at build time; do not bump it by hand.
dynamic = ["version"]
description = "Scientific Python toolkit for earthquake engineering: GCIM-based ground motion record selection, hazard consistency, vulnerability modelling, and storey loss functions."
authors = [
    { name = "Djura | Risk - Data - Engineering S.r.l.", email = "info@djura.it" },
]
readme = "README.md"
license = "AGPL-3.0-later"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
keywords = [
    "earthquake-engineering",
    "seismic-hazard",
    "ground-motion-selection",
    "gcim",
    "vulnerability",
    "fragility",
    "storey-loss-function",
    "performance-based-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy (>=1.26)",
    "scipy (>=1.14)",
    "pandas (>=2.2)",
    "numba (>=0.59)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)",

    "joblib (>=1.5.3,<2.0.0)",
    "pwlf (>=2.5.2,<3.0.0)",
]

[project.urls]
Homepage = "https://github.com/djura-risk-data-engineering/djura"
Repository = "https://github.com/djura-risk-data-engineering/djura"
Issues = "https://github.com/djura-risk-data-engineering/djura/issues"
Changelog = "https://github.com/djura-risk-data-engineering/djura/blob/main/CHANGELOG.md"

[project.optional-dependencies]
plot = ["matplotlib (>=3.9)"]
hdf5 = ["h5py (>=3.16,<4)"]
xgboost = ["xgboost (>=1.7)"]
all = ["matplotlib (>=3.9)", "h5py (>=3.16,<4)", "xgboost (>=1.7)"]

[tool.poetry]
packages = [{ include = "djura", from = "src" }]
include = [{ path = "src/djura/py.typed" }]
exclude = [
    "dump",
    "htmlcov",
    "venv",
    ".venv",
    "tests",
    "docs",
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pickle",
    "**/*.pkl",
    "**/*.pickle.gz",
    "**/*.pkl.gz",
    "**/.env",
    "**/.env.*",
]
version = "0.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.4.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
# Match tags like v1.2.3 or v1.2.3rc1; the leading "v" is stripped.
pattern = "default-unprefixed"
# When building from a non-tagged commit, append a dev/local segment so
# wheels uploaded by accident never collide with a real release.
format-jinja = """
    {%- if distance == 0 -%}
        {{ base }}
    {%- else -%}
        {{ base }}.dev{{ distance }}+g{{ commit }}
    {%- endif -%}
"""

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "schema (>=0.7.8,<0.8.0)",
]
docs = [
    "sphinx (>=7.0)",
    "furo (>=2024.0)",
    "sphinx-autodoc-typehints>=3.10; python_version >= '3.12'",
]

[tool.coverage.run]
branch = true
source = ["src/djura"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
